my-kubernetes-resources-main/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"service.beta.kubernetes.io/aws-load-balancer-internal":"true"},"creationTimestamp":"2023-05-10T16:47:39Z","finalizers":["service.kubernetes.io/load-balancer-cleanup"],"name":"grafana-svc","namespace":"grafana","resourceVersion":"15158699","uid":"45d50c99-7c64-44d4-93ed-9a09f6d49d0f"},"spec":{"allocateLoadBalancerNodePorts":true,"clusterIP":"172.20.48.240","clusterIPs":["172.20.48.240"],"externalTrafficPolicy":"Cluster","intern [...]
    service.beta.kubernetes.io/aws-load-balancer-type: external
  creationTimestamp: "2023-05-10T16:47:39Z"
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  name: grafana-svc
  namespace: grafana
  resourceVersion: "15160629"
  uid: 45d50c99-7c64-44d4-93ed-9a09f6d49d0f
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 172.20.48.240
  clusterIPs:
  - 172.20.48.240
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 31476
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: grafana
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - hostname: internal-a45d50c997c6444d493ed9a09f6d49d0-1770866607.us-east-1.elb.amazonaws.com
