my-kubernetes-resources-main/kafka-connect-ui-ext.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: my-kafka-connect-ui
    meta.helm.sh/release-namespace: util
  creationTimestamp: "2023-06-04T04:51:31Z"
  labels:
    app: kafka-connect-ui
    app.kubernetes.io/managed-by: Helm
    chart: kafka-connect-ui-0.1.0
    release: my-kafka-connect-ui
  name: my-kafka-connect-ui-external
  namespace: util
spec:
  
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: kafka-connect-ui
    release: my-kafka-connect-ui
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
