my-kubernetes-resources-main/new-airflow-ext-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: airflow
    meta.helm.sh/release-namespace: airflow
  labels:
    app.kubernetes.io/managed-by: Helm
    chart: airflow-1.9.0
    component: webserver
    heritage: Helm
    release: airflow
    tier: airflow
  name: airflow-webserver-external
  namespace: airflow
spec:
  ports:
  - name: airflow-ui-ext
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    component: webserver
    release: airflow
    tier: airflow
  sessionAffinity: None
  type: NodePort
