my-kubernetes-resources-main/prom-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
  creationTimestamp: "2023-04-25T21:30:32Z"
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: trelease
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: prometheus
    app.kubernetes.io/version: v2.43.0
    helm.sh/chart: prometheus-21.0.0
  name: prom-server-svc
  namespace: prometheus
  resourceVersion: "15171278"
  uid: baa8d55a-915b-45a7-a719-e2d170f88998
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 172.20.195.66
  clusterIPs:
  - 172.20.195.66
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 32265
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: trelease
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/version: v2.43.0
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - hostname: internal-abaa8d55a915b45a7a719e2d170f8899-374585614.us-east-1.elb.amazonaws.com
