my-kubernetes-resources-main/s.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"smtp4dev","namespace":"util"},"spec":{"ports":[{"name":"smtp","port":25,"protocol":"TCP","targetPort":25},{"name":"http","port":80,"protocol":"TCP","targetPort":80}],"selector":{"app":"smtp4dev"}}}
    creationTimestamp: "2023-05-24T04:09:36Z"
    name: smtp4dev
    namespace: util
    resourceVersion: "10526237"
    uid: d15f98f8-fc3a-4107-8262-7f217bb15e74
  spec:
    clusterIP: 10.111.142.146
    clusterIPs:
    - 10.111.142.146
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: smtp
      port: 25
      protocol: TCP
      targetPort: 25
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: smtp4dev
    sessionAffinity: None
    type: NodePort 
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
