my-kubernetes-resources-main/schema-registry-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: schema-registry
  name: schema-registry-external
  namespace: kafka
  
spec:
  ports:
  - name: server
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: schema-registry
  sessionAffinity: None
  type: NodePort
